@@ -1,3 +1,4 @@
+4/4/12 replace equation with "x = 0" when slope is undefined
 4/4/12 put "Erase Lines" button next to "Save Line" button
 4/4/12 don't disable any controls when "Lines" is unchecked (for discussion)
 4/4/12 add horizontal separators for titles in control panels
